# wasm-debug-instantiate

./: Cargo.toml  README.md  build.sh  index.html
src/: lib.rs
